fixed dropdown menu

--- a/User Interface Interactions Demo/styles.css
+++ b/User Interface Interactions Demo/styles.css
@@ -9,7 +9,8 @@ ul {
   gap: 1rem;
 }
 .dropdown-content {
-    display: none;
+    display: flex;
+    flex-direction: column;		
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -23,9 +24,8 @@ ul {
 .dropdown-content a:hover {
   background-color: #f1f1f1
 }
-.dropdownContent {
-    display: flex;
-    flex-direction: column;
+.dropdown-content-hide {
+  display: none;
 }
 
 /* HAMBURGER MENU */
