Added validation for confirmation password matching password

--- a/Form Practice/styles.css
+++ b/Form Practice/styles.css
@@ -42,7 +42,8 @@ input[type="text"].error, input[type="email"].error {
 }
 
 #submit {
-  border-radius: 3px;
   font-size: 1rem;
   font-weight: bold;
+  border-radius: 3px;
+  padding: .5rem;
 }
