Fixed styling added required error message

--- a/Form Practice/styles.css
+++ b/Form Practice/styles.css
@@ -23,16 +23,18 @@ body {
 
 input {
   width: 100%;
-  padding: .5rem;
-  margin: .25rem 0 .25rem 0;
+  padding: 0.5rem;
+  margin: .25rem 0 0.25rem 0;
   border-radius: 3px;
 }
 
-input[type="text"]:valid, input[type="email"]:valid {
+input[type="text"]:valid,
+input[type="email"]:valid {
   border: 2px solid green;
 }
 
-input[type="text"].error, input[type="email"].error {
+input[type="text"].error,
+input[type="email"].error {
   border: 2px solid red;
 }
 
@@ -45,5 +47,17 @@ input[type="text"].error, input[type="email"].error {
   font-size: 1rem;
   font-weight: bold;
   border-radius: 3px;
-  padding: .5rem;
+  padding: 0.5rem;
+}
+
+.requiredErrorMsg {
+  color: red;
+  font-size: .75rem;
+  padding: 0 0 .5rem 0;
+  display: inline;
+  visibility: hidden;
+}
+
+.showRequiredErrorMsg {
+  visibility: visible;
 }
