--- a/Form Practice/styles.css
+++ b/Form Practice/styles.css
@@ -24,7 +24,7 @@ body {
 input {
   width: 100%;
   padding: 0.5rem;
-  margin: .25rem 0 0.25rem 0;
+  margin: 0.25rem 0 0.25rem 0;
   border-radius: 3px;
 }
 
@@ -33,6 +33,7 @@ input[type="email"]:valid {
   border: 2px solid green;
 }
 
+/* using instead of :invalid since that shows red from the beginning before any data is entered */
 input[type="text"].error,
 input[type="email"].error {
   border: 2px solid red;
@@ -52,7 +53,7 @@ input[type="email"].error {
 
 .requiredErrorMsg {
   color: red;
-  padding: 0 0 .5rem 0;
+  padding: 0 0 0.5rem 0;
   display: inline;
   visibility: hidden;
 }
